[package]
name = "wasm-sockets"
version = "0.1.0"
authors = ["scratchyone <scratchywon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4.11"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

[dev-dependencies]
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
