[package]
name = "wasm-sockets"
version = "1.0.0"
authors = ["scratchyone <scratchywon@gmail.com>"]
edition = "2018"
license = "MIT"
categories = [
  "game-development",
  "network-programming",
  "wasm",
  "web-programming::websocket",
]
description = "A WASM-only websocket library"
repository = "https://github.com/scratchyone/wasm-sockets"
readme = "Readme.md"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
thiserror = "1.0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.22", features = [
  "BinaryType",
  "Blob",
  "CloseEvent",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }

[dev-dependencies]
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.19"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3.22", features = ["Window"] }
